cabal-version:      3.0
name:               rort
version:            0.1.0.0
license-file:       LICENSE

extra-source-files:
    README.md

common project-config
  default-language:     Haskell2010
  default-extensions:   OverloadedStrings

  ghc-options:          -Wall
                        -Wcompat
                        -Wincomplete-record-updates
                        -Wincomplete-uni-patterns
                        -Wpartial-fields
                        -Wredundant-constraints
                        -Wunused-packages

library
  import:           project-config
  build-depends:    base >=4.7 && <5
                  , async
                  , aeson
                  , megaparsec
                  , exceptions
                  , base64-bytestring
                  , bytestring
                  , dunai
                  , free
                  , parser-combinators
                  , containers
                  , mmorph
                  , derive-storable
                  , unordered-containers
                  , text
                  , lens
                  , resourcet
                  , gltf-loader
                  , chronos
                  , rosezipper
                  , torsor
                  , topograph
                  , linear
                  , vulkan
                  , GLFW-b
                  , OpenGL
                  , bitmap
                  , stb-image
                  , stm
                  , vector
                  , VulkanMemoryAllocator
                  , bytestring
                  , mtl
                  , wavefront
                  , bearriver
  hs-source-dirs:   src
  default-language: Haskell2010
  exposed-modules:  Rort.Examples.Triangle
                  , Rort.Examples.Buffer
                  , Rort.Examples.Uniform
                  , Rort.Window
                  , Rort.Window.GLFW
                  , Rort.Window.Types
                  , Rort.Vulkan
                  , Rort.Vulkan.Context
                  , Rort.Render.Types
                  , Rort.Render.Swapchain
                  , Rort.Render.FramesInFlight
                  , Rort.Render
                  , Rort.Util.Resource

executable rort
    import:           project-config
    build-depends:    base >=4.7 && <5
                    , async
                    , megaparsec
                    , exceptions
                    , dunai
                    , free
                    , parser-combinators
                    , containers
                    , mmorph
                    , derive-storable
                    , unordered-containers
                    , text
                    , lens
                    , resourcet
                    , gltf-loader
                    , chronos
                    , rosezipper
                    , torsor
                    -- , sdl2
                    , topograph
                    , linear
                    , OpenGL
                    , bitmap
                    , stb-image
                    , stm
                    , vector
                    , bytestring
                    , mtl
                    , bearriver
                    , vector
                    , GLFW-b
                    , vulkan
    hs-source-dirs:   src

    default-language: Haskell2010
    main-is:  Main.hs

test-suite test
  import:             project-config
  ghc-options:        -with-rtsopts=-M2G -with-rtsopts=-N4
  type:               exitcode-stdio-1.0
  hs-source-dirs:     test
  main-is:            Driver.hs
  build-depends:
    , base
    , hedgehog
    , hspec
    , tasty-hedgehog
    , tasty-hspec
    , tasty
    , text
    , rort
    , mtl
    , exceptions
    , bytestring
    , resourcet
    , mmorph
  build-tool-depends:
    tasty-discover:tasty-discover